Setting color palette and font on tailwind

--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -1,68 +1,65 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@import "tailwindcss";
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+@theme {
+  /* FONTS */
+  --font-primary: "Funnel Sans", sans-serif;
+  --breakpoint-3xl: 120rem;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    /* DARK COLORS */
+  --color-darkBackground:#0D1529;
+  --color-darkComponent: #1A2734;
+  --color-darkComponentElement: #314157;
+  --color-darkPrimary: #1A368B;
+  --color-darkSecondary: #193AB7;
+  --color-darkAccent: #A683FF;
+  --color-darkNeutral: #BDDAFE;
+  --color-darkInfo: #D4D4D8;
+  --color-darkSuccess: #00BA7B;
+  --color-darkWarning: #FF8904;
+  --color-darkDanger: #F82834;
+
+  --color-darkBgText: #E0E2DB;
+  --color-darkPSText: #EDF1FE;
+  --color-darkAccentText: #1C184B;
+  --color-darkNeutralText: #162455;
+  --color-darkInfoText: #010515;
+  --color-darkSuccessText: #002C21;
+  --color-darkWarningText: #7C2808;
+  --color-darkDangerText: #440607;
+
+  /* LIGHT COLORS */
+  --color-lightBackground: #E2E5E9;
+  --color-lightComponent: #C6D2FF;
+  --color-lightComponentElement: #8C4FFF;
+  --color-lightPrimary: #422AD5;
+  --color-lightSecondary: #7C85FF;
+  --color-lightAccent: #D8B0FF;
+  --color-lightNeutral: #A1B1FF;
+  --color-lightInfo: #43546A;
+  --color-lightSuccess: #00D390;
+  --color-lightWarning: #FCB700;
+  --color-lightDanger: #FF6266;
+
+  --color-lightBgText: #010515;
+  --color-lightPSText: #E0E7FF;
+  --color-lightAccentText: #1C184B;
+  --color-lightNeutralText: #010515;
+  --color-lightInfoText: #DFE5ED;
+  --color-lightSuccessText: #002C21;
+  --color-lightWarningText: #7C2808;
+  --color-lightDangerText: #440607;
+
+
+  --ease-fluid: cubic-bezier(0.3, 0, 0, 1);
+  --ease-snappy: cubic-bezier(0.2, 0, 0, 1);
+
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+/* TYPOGRAPHY */
+funnel-sans-<uniquifier> 
+{
+  font-family: "Funnel Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
 }
