--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -1,5 +1,8 @@
 @import "tailwindcss";
-
+/*
+@plugin "daisyui";
+Revisar si debo de cambiar esto por el plugin de daisyui.
+*/
 @theme {
   /* FONTS */
   --font-primary: "Funnel Sans", sans-serif;
