tiny update on banner, for the time beign, i'll leave it like that. Let's move forward with the login and register pages, and create the back for that as well.

--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -11,8 +11,10 @@ Revisar si debo de cambiar esto por el plugin de daisyui.
     /* DARK COLORS */
   --color-darkBackground:#0D1529;
   --color-darkComponent: #1A2734;
+  --color-darkComponent2: #010515;
   --color-darkComponentElement: #314157;
   --color-darkPrimary: #1A368B;
+  --color-darkPrimary2: #001144;
   --color-darkSecondary: #193AB7;
   --color-darkAccent: #A683FF;
   --color-darkNeutral: #BDDAFE;
