css tiny update. Connecting user login/register with front and back but having issues, redoing that

--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -16,7 +16,7 @@ Revisar si debo de cambiar esto por el plugin de daisyui.
   --color-darkPrimary: #1A368B;
   --color-darkPrimary2: #001144;
   --color-darkSecondary: #193AB7;
-  --color-darkAccent: #A683FF;
+  --color-darkAccent: #A1B1FF;
   --color-darkNeutral: #BDDAFE;
   --color-darkInfo: #D4D4D8;
   --color-darkSuccess: #00BA7B;
