starting HomeLogIn, little modifications on some components... I need to finish the home page...

--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -24,7 +24,7 @@ Revisar si debo de cambiar esto por el plugin de daisyui.
   --color-darkDanger: #F82834;
 
   --color-darkBgText: #E0E2DB;
-  --color-darkPSText: #EDF1FE;
+  --color-darkPSText: #C6D2FF;
   --color-darkAccentText: #1C184B;
   --color-darkNeutralText: #162455;
   --color-darkInfoText: #010515;
